2008-11-13  kokosabu  <kokosabu@gmail.com>

        * Fixed max, min.

2008-11-13  higepon  <higepon@users.sourceforge.jp>

        * Implemented all of reading number2.

        * Added read of #i#b-01 style.

        * Added read of #i#b01 style.

        * Added read of #b01 style.

2008-11-12  higepon  <higepon@users.sourceforge.jp>

        * NumberScanner.re : Added.

        * NumberReader.y: Added.

2008-11-11  higepon  <higepon@users.sourceforge.jp>

        * Added : complex?, real?, integer?, real-valued?, rational-valued? adn integer-valued?.

        * Implemented All of procedures defined in R6RS lib 11.4 Exact bitwise arithmetic.

        * Added : bitwise-arithmetic-shift-right, bitwise-arithmetic-shift.

2008-11-10  higepon  <higepon@users.sourceforge.jp>

        * Added : bitwise-arithmetic-shift-left.

        * Added : bitwise-not, bitwise-and, bitwise-ior, bitwise-xor, bitwise-bit-count
                  bitwise-length, bitwise-first-bit-set and bitwise-if.

        * lib/core/flonum.scm, lib/core/bitwise.scm: Added.

        * lib/core: Added. We place base library here.

        * BitwiseProcedures.cpp/.h: Added.

2008-11-09  higepon  <higepon@users.sourceforge.jp>

        * Implemented All of procedures defined in R6RS lib 11.3 Flonums.

        * Added : fldiv, flmod, fldiv-and-mod, fldiv0, flmod0, fldiv0-and-mod0
                  flnumerator, fldenominator, flfloor, flceiling, fltruncate, flround
                  flexp, fllog, flsin, flcos, fltan, flasin, flacos, flatan, flsqrt
                  flexpt and fixnum->flonum.

2008-11-08  higepon  <higepon@users.sourceforge.jp>

        * Added : flabs.

        * scripts/gen-cproc.scm (proc-name->c-proc-name): Added special case for fl/ and fl-.

        * Added fl=?, fl>?, fl>=?, fl<?, fl<=?, real->flonum, flodd?, fleven?
                flfinite?, flinfinite?, flnan?, flmax, flmin, fl+, fl-, fl*, fl/.
