@@ -1,4 +1,4 @@
-/* Generated by re2c 0.13.5 on Fri Nov 14 15:09:20 2008 */
+/* Generated by re2c 0.13.5 on Fri Nov 14 15:57:34 2008 */
 #line 1 "NumberScanner.re"
 #include <stdio.h>
 #include "Object.h"
@@ -85,18 +85,11 @@ void NumberScanner::fill(int n)
         }
 
     }
-    printf("cursor=<%c>\n", *cursor_);
     const int readSize = i;
     cursor_ = cursor_ - tokenOffset;
     token_ = buffer_;
     marker_ = marker_ - tokenOffset;
     limit_ = limit_ - tokenOffset + readSize;
-    printf("fill :");
-    for (int k = 0; k < i; k++) {
-        printf("<%c>", buffer_[k]);
-    }
-    printf("\n limit - cursor = %d\n", limit_ - cursor_);
-    printf("after cursor=<%c>\n", *(cursor_ + 1));
 
 }
 
@@ -107,13 +100,13 @@ int number_yylex()
 
 int NumberScanner::scan()
 {
-#line 115 "NumberScanner.re"
+#line 108 "NumberScanner.re"
 
 
     for(;;)
     {
 
-#line 117 "<stdout>"
+#line 110 "<stdout>"
 {
 	YYCTYPE yych;
 
@@ -209,63 +202,61 @@ yy5:
 	yych = *(YYMARKER = ++YYCURSOR);
 	if (yych == 'n') goto yy19;
 yy6:
-#line 148 "NumberScanner.re"
+#line 141 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return IMAG;
         }
-#line 218 "<stdout>"
+#line 211 "<stdout>"
 yy7:
 	++YYCURSOR;
-#line 136 "NumberScanner.re"
+#line 129 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return PLUS;
         }
-#line 226 "<stdout>"
+#line 219 "<stdout>"
 yy9:
 	++YYCURSOR;
-#line 140 "NumberScanner.re"
+#line 133 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return MINUS;
         }
-#line 234 "<stdout>"
+#line 227 "<stdout>"
 yy11:
 	++YYCURSOR;
-#line 144 "NumberScanner.re"
+#line 137 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return SLASH;
         }
-#line 242 "<stdout>"
+#line 235 "<stdout>"
 yy13:
 	++YYCURSOR;
-#line 152 "NumberScanner.re"
+#line 145 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return AT;
         }
-#line 250 "<stdout>"
+#line 243 "<stdout>"
 yy15:
 	++YYCURSOR;
-#line 161 "NumberScanner.re"
+#line 153 "NumberScanner.re"
 	{
             yylval.intValue = YYTOKEN[0] - '0';
-            printf("TOKEN:DIGIT_2=%d\n", yylval.intValue);
             YYTOKEN = YYCURSOR;
             return DIGIT_2;
         }
-#line 260 "<stdout>"
+#line 252 "<stdout>"
 yy17:
 	++YYCURSOR;
-#line 167 "NumberScanner.re"
+#line 158 "NumberScanner.re"
 	{
-            printf("TOKEN:END_OF_FILE\n");
             YYTOKEN = YYCURSOR;
             return END_OF_FILE;
         }
-#line 269 "<stdout>"
+#line 260 "<stdout>"
 yy19:
 	yych = *++YYCURSOR;
 	if (yych != 'f') goto yy2;
@@ -274,12 +265,12 @@ yy19:
 	yych = *++YYCURSOR;
 	if (yych != '0') goto yy2;
 	++YYCURSOR;
-#line 132 "NumberScanner.re"
+#line 125 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return MY_INF;
         }
-#line 283 "<stdout>"
+#line 274 "<stdout>"
 yy24:
 	yych = *++YYCURSOR;
 	if (yych != 'n') goto yy2;
@@ -288,39 +279,38 @@ yy24:
 	yych = *++YYCURSOR;
 	if (yych != '0') goto yy2;
 	++YYCURSOR;
-#line 128 "NumberScanner.re"
+#line 121 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return MY_NAN;
         }
-#line 297 "<stdout>"
+#line 288 "<stdout>"
 yy29:
 	++YYCURSOR;
-#line 156 "NumberScanner.re"
+#line 149 "NumberScanner.re"
 	{
-            printf("TOKEN:RADIX_2\n");
             YYTOKEN = YYCURSOR;
             return RADIX_2;
         }
-#line 306 "<stdout>"
+#line 296 "<stdout>"
 yy31:
 	++YYCURSOR;
-#line 124 "NumberScanner.re"
+#line 117 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return INEXACT;
         }
-#line 314 "<stdout>"
+#line 304 "<stdout>"
 yy33:
 	++YYCURSOR;
-#line 120 "NumberScanner.re"
+#line 113 "NumberScanner.re"
 	{
             YYTOKEN = YYCURSOR;
             return EXACT;
         }
-#line 322 "<stdout>"
+#line 312 "<stdout>"
 }
-#line 174 "NumberScanner.re"
+#line 164 "NumberScanner.re"
 
 
     }
